--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
-    "react": "^19.2.1"
+    "react": "^19.2.1",
+    "vite": "^7.2.7",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
